Update translations (PR #1435)

--- a/app/src/main/res/values-ckb/strings.xml
+++ b/app/src/main/res/values-ckb/strings.xml
@@ -9,4 +9,230 @@ to the public domain.
 You should have received a copy of the CC0 legalcode along with this
 work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 -->
-<resources xmlns:tools="http://schemas.android.com/tools"></resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="settings">ڕێکخستنەکان</string>
+    <string name="light">ڕووناک</string>
+    <string name="dark">تاریک</string>
+    <string name="delete">سڕینەوە</string>
+    <string name="appearance">ڕووکار</string>
+    <string name="rename">ناونانەوە</string>
+    <string name="confirm_delete">دڵنیاکردنەوە</string>
+    <string name="do_you_really_want_to_delete_this_witharg">ئایا دڵنیایت لە سڕینەوەی %s؟</string>
+    <string name="confirm_overwrite">دڵنیاکردنەوە</string>
+    <string name="file_already_exists_overwerite">فایل بوونی هەیە، جێگۆڕینی ئەکەی ؟</string>
+    <string name="browse_filesystem">کردنەوەی فایلی سیستەم</string>
+    <string name="title">ناونیشان</string>
+    <string name="empty_directory">فۆڵدەری بەتاڵ</string>
+    <string name="enter_name_of_folder">ناوی فۆڵدەر بنوسە</string>
+    <string name="create_folder">دروستکردنی فۆڵدەر</string>
+    <string name="create_new_document">دروستکردنی بەڵگەنامەی نوێ</string>
+    <string name="move">گواستنەوە</string>
+    <string name="copy">لەبەرگرتنەوە</string>
+    <string name="info">زانیاری</string>
+    <string name="file_folder_already_exists_please_use_a_different_name">فایل/فۆڵدەر بوونی هەیە! تکایە ناوێکی جیاواز بەکاربێنە</string>
+    <string name="import_from_device">هێنان لە ئامێرەوە</string>
+    <string name="import_">هێنان</string>
+    <string name="select_folder">فۆڵدەر دیاریبکە</string>
+    <string name="edit">دەستکاریکردن</string>
+    <string name="search_documents">گەڕان بۆ بەڵگەنامە</string>
+    <string name="share_to_arrow" tools:ignore="TypographyEllipsis">ناردن بۆ&#8230;</string>
+    <string name="share">ناردن</string>
+    <string name="search">گەڕان</string>
+    <string name="editor">دەستکاریکەر</string>
+    <string name="folders">فۆڵدەرەکان</string>
+    <string name="files">فایلەکان</string>
+    <string name="document">بەڵگەنامە</string>
+    <string name="documents">بەڵگەنامە</string>
+    <string name="theme">ڕووکار</string>
+    <string name="about">دەربارە</string>
+    <string name="plaintext">دەقی سادە</string>
+    <string name="file">فایل</string>
+    <string name="image">وێنە</string>
+    <string name="font_size">قەبارەی نووسین</string>
+    <string name="render_rtl_language">گونجاندن بۆ زمانە ڕاست بۆ چەپەکان</string>
+    <string name="last_modified_witharg">دوایین دەستکاریکردن: %s</string>
+    <string name="select_this_folder">دیاریکردنی ئەم فۆڵدەرە</string>
+    <string name="select">دیاریبکە</string>
+    <string name="create">دروستکردن</string>
+    <string name="select_entries">دیاریکردنی هەمووی</string>
+    <string name="one_item_selected">یەک فایل دیاریکراوە</string>
+    <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%d فایل دیاریکراوە</string>
+    <string name="hide_statusbar">شارنەوەی شریتی دۆخ</string>
+    <string name="name">ناو</string>
+    <string name="url_or_path">ناونیشان / شوێن</string>
+    <string name="insert_link">زیادکردنی بەستەر</string>
+    <string name="insert_image">زیادکردنی وێنە</string>
+    <string name="contributors">بەشداربووان</string>
+    <string name="save_location">شوێنی پاراستن</string>
+    <string name="licenses">مۆڵەت</string>
+    <string name="changelog">گۆڕانکارییەکان</string>
+    <string name="more_info">زانیاری زیاتر</string>
+    <string name="show_license_of_the_app">بینینی مۆڵەتی بەرنامەکە</string>
+    <string name="language_change_restart_description">بۆ گۆڕینی زمان، پێویستە بەرنامەکە دابخەیت و دووبارە بیکەیتەوە</string>
+    <string name="language">زمان</string>
+    <string name="open_with">کردنەوە لەڕێی</string>
+    <string name="sort">ڕیزکردن بەپێی</string>
+    <string name="date">بەروار</string>
+    <string name="deleteme____1">ناو</string>
+    <string name="size">قەبارە</string>
+    <string name="contribute">هاوکاریکردن</string>
+    <string name="donate">بەخشش</string>
+    <string name="project_page">لاپەڕەی پڕۆژەکە</string>
+    <string name="press_back_again_to_exit">دووبارە دەست بنێ بە \'گەڕانەوە\' بۆ دەرچوون</string>
+    <string name="exit">دەرچوون</string>
+    <string name="undo">هەنگاوێک دواتر</string>
+    <string name="redo">هەنگاوێک پێشتر</string>
+    <string name="more">زیاتر</string>
+    <string name="help">یارمەتی</string>
+    <string name="task">فرمان</string>
+    <string name="context">دەق</string>
+    <string name="list">لیست</string>
+    <string name="priority">ڕێژەیی</string>
+    <string name="history">مێژوو</string>
+    <string name="sync">هاوکاتکردن</string>
+    <string name="search_or_custom">گەڕان / تایبەت</string>
+    <string name="save">پاراستن</string>
+    <string name="update">نوێکردنەوە</string>
+    <string name="clear">سڕینەوە</string>
+    <string name="due_date">هەتا بەرواری</string>
+    <string name="current_date">بەرواری ئێستا</string>
+    <string name="archive">ئەرشیف</string>
+    <string name="add_task">زیادکردنی فرمان</string>
+    <string name="add_x_witharg">زیادکردنی %s</string>
+    <string name="refresh">تازەکردنەوە</string>
+    <string name="create_shortcut">دروستکردنی کورتکراوە</string>
+    <string name="files_and_folders">فایل و فۆڵدەرەکان</string>
+    <string name="document_browser">گەڕان بۆ بەڵگەنامە</string>
+    <string name="file_browser">گەڕان بۆ فایل</string>
+    <string name="set_due_date">ڕێکخستنی بەروار</string>
+    <string name="insert_replace_date">زیادکردنی بەروار</string>
+    <string name="create_note" needed="false">دروستکردنی تێبینی</string>
+    <string name="special_documents" needed="false">بەڵگەنامەی تایبەت</string>
+    <string name="keep_screen_on" needed="false">هێشتنەوەی شاشە بە کراوەیی</string>
+    <string name="back_to_previous_folder" needed="false">گەڕانەوە بۆ فۆڵدەری پێشوو</string>
+    <string name="app_settings" needed="false">ڕێکخستنەکانی بەرنامە</string>
+    <string name="editor_settings" needed="false">ڕێکخستنەکانی دەستکاریکەر</string>
+    <string name="remember_last_folder_location_on_startup" needed="false">بیرخستنەوەی دوایین شوێنی فۆڵدەر لەکاتی کردنەوەی بەرنامەکە</string>
+    <string name="number_of_files_witharg" needed="false">ژمارەی فایلەکان: %d</string>
+    <string name="remember_last_directory">بیرخستنەوەی دوایین شوێن</string>
+    <string name="format">شێواز</string>
+    <string name="project">پرۆژەکان</string>
+    <string name="projects">پرۆژەکان</string>
+    <string name="none">هیچ کام</string>
+    <string name="other">ئەوانی تر</string>
+    <string name="empty_file">فایلی بەتاڵ</string>
+    <string name="underline">هێڵ بە ژێردا هاتوو</string>
+    <string name="rtl_rendering">پشتگیری ڕاست بۆ چەپ</string>
+    <string name="general">گشتی</string>
+    <string name="resources">سەرچاوەکان</string>
+    <string name="line_spacing">مەودای نێوان</string>
+    <string name="unordered_list_char_dash">داش (-)</string>
+    <string name="unordered_list_char_asterisk">ئەستێرە (*)</string>
+    <string name="unordered_list_char_plus">زیادکردن (+)</string>
+    <string name="vertical_alignment">باری ستوونی</string>
+    <string name="horizontal_alignment">باری ئاسۆیی</string>
+    <string name="default_">بنەڕەتی</string>
+    <string name="left">چەپ</string>
+    <string name="right">ڕاست</string>
+    <string name="top">سەرەوە</string>
+    <string name="bottom">خوارەوە</string>
+    <string name="center">ناوەڕاست</string>
+    <string name="center_text">دەق لە ناوەڕاست</string>
+    <string name="clipboard">لەبەرگیراوەکان</string>
+    <string name="open_source_licenses">مەرج و مۆڵەتی سەرچاوەکان</string>
+    <string name="rate_this_app">هەڵسەنگاندنی بەرنامەکە</string>
+    <string name="translate">وەرگێڕاوە بۆ کوردی لەلایەن GoRaN</string>
+    <string name="more_info_and_help">زانیاری زیاتر و هاوکاری</string>
+    <string name="report_bugs">هەڵەیەک ڕاپۆرت بکە</string>
+    <string name="join_community">بەشداربوون لە کۆڕبەند</string>
+    <string name="help_translating_this_app">کراوە بە کوردی لەلایەن گۆران غەریب - کوردرۆید</string>
+    <string name="source_code">کۆدی سەرچاوە</string>
+    <string name="project_license">مۆڵەتی پڕۆژە</string>
+    <string name="descending">ژێرەوسەر</string>
+    <string name="ascending">سەرەوژێر</string>
+    <string name="location">شوێن</string>
+    <string name="directory">شوێن</string>
+    <string name="details">زانیاری</string>
+    <string name="calendar">ساڵنامە</string>
+    <string name="gallery_picture">وێنەی گەلەری</string>
+    <string name="camera_picture">وێنەی کامێرا</string>
+    <string name="description">وەسف</string>
+    <string name="edit_picture">دەستکاریکردنی وێنە</string>
+    <string name="math">هاوشێوە</string>
+    <string name="table_of_contents">ناوەڕۆکی خشتە</string>
+    <string name="miscellaneous">هەمەجۆر</string>
+    <string name="prefer_view">شێوازی پیشاندان</string>
+    <string name="no_calendar_app_is_installed">بەرنامەی ساڵنامە دانەبەزێنراوە!</string>
+    <string name="popular_documents">بەڵگەنامە گرنگەکان</string>
+    <string name="color">ڕەنگ</string>
+    <string name="zero_width_space">نیو بزوێن</string>
+    <string name="basic_color_scheme">ڕەنگی بنەڕەتی</string>
+    <string name="preset">ڕێکخستنەوە</string>
+    <string name="foreground">شاشەی لاوەکی</string>
+    <string name="background">پشت شاشە</string>
+    <string name="type">جۆر</string>
+    <string name="folder">فۆڵدەر</string>
+    <string name="font">فۆنت</string>
+    <string name="pick_date">دیاریکردنی بەروار</string>
+    <string name="pick_time">دیاریکردنی کات</string>
+    <string name="result">ئەنجام</string>
+    <string name="just_time">تەنیا کات</string>
+    <string name="just_date">تەنیا بەروار</string>
+    <string name="folder_first">لەپێشدا فۆڵدەر</string>
+    <string name="go_to">چوون بۆ</string>
+    <string name="internal_storage">بیرگەی ناوخۆیی</string>
+    <string name="black">ڕەش</string>
+    <string name="white">سپی</string>
+    <string name="view">بینین</string>
+    <string name="view_mode">شێوازی پیشاندان</string>
+    <string name="edit_mode">شێوازی دەستکاریکردن</string>
+    <string name="share_into">ناردن بۆ</string>
+    <string name="favourite">دڵخواز</string>
+    <string name="favourites">دڵخوازەکان</string>
+    <string name="please_wait">تکایە چاوەڕانبە</string>
+    <string name="reload">بارکردنەوە</string>
+    <string name="copy_file">لەبەرگرتنەوەی فایل</string>
+    <string name="page">لاپەڕە</string>
+    <string name="tools">ئامرازەکان</string>
+    <string name="reading">خوێندنەوە</string>
+    <string name="read">خوێندنەوە</string>
+    <string name="table">خشتە</string>
+    <string name="delete_lines">سڕینەوەی هێڵەکان</string>
+    <string name="open_link">کردنەوەی بەستەر</string>
+    <string name="common_color_picker">دیاریکردنی ڕەنگ</string>
+    <string name="date_and_time">بەروار و کات</string>
+    <string name="jump_to_bottom">چوون بۆ خوارەوە</string>
+    <string name="quote">ووتە</string>
+    <string name="heading">سەردێڕ</string>
+    <string name="heading_1">سەردێڕ ١</string>
+    <string name="heading_2">سەردێڕ ٢</string>
+    <string name="heading_3">سەردێڕ ٣</string>
+    <string name="heading_4">سەردێڕ ٤</string>
+    <string name="heading_5">سەردێڕ ٥</string>
+    <string name="heading_6">سەردێڕ ٦</string>
+    <string name="bold">تۆخ</string>
+    <string name="italic">لار</string>
+    <string name="highlighted">دیاریکراو</string>
+    <string name="link_color">ڕەنگی بەستەر</string>
+    <string name="sort_alphabetically">ڕیزکردنی ئەبجەدی</string>
+    <string name="create_new_file_or_folder">دروستکردنی فایل یان فۆڵدەری نوێ</string>
+    <string name="selected">دیاریکراو</string>
+    <string name="back">گەڕانەوە</string>
+    <string name="drag">ڕایکێشە</string>
+    <string name="created">دروستکرا</string>
+    <string name="file_settings">ڕێکخستنەکانی فایل</string>
+    <string name="search_and_replace">گەڕان / گۆڕین</string>
+    <string name="search_for">گەڕان بۆ</string>
+    <string name="replace_with">گۆڕین لەگەڵ</string>
+    <string name="replace_once">گۆڕینی (1)</string>
+    <string name="replace_all">گۆڕینی هەمووی</string>
+    <string name="matches">هاوشێوە</string>
+    <string name="backup_settings">ڕێکخستنی پاشەکەوت</string>
+    <string name="restore_settings">ڕێکخستنی گێڕانەوە</string>
+    <string name="skip">تێپەڕاندن</string>
+    <string name="overwrite">گۆڕین</string>
+    <string name="keep_both_all">هێشتنەوەی هەردووکی (هەمووی)</string>
+    <string name="skip_all">تێپەڕاندن (هەمووی)</string>
+    <string name="overwrite_all">گۆڕین (هەمووی)</string>
+    <string name="copy_move_conflict_message">\'%s\' بوونی هەیە لە %s</string>
+</resources>
