--- a/app/src/main/res/values-kmr/strings.xml
+++ b/app/src/main/res/values-kmr/strings.xml
@@ -9,4 +9,69 @@ to the public domain.
 You should have received a copy of the CC0 legalcode along with this
 work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 -->
-<resources xmlns:tools="http://schemas.android.com/tools"></resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="settings">Mîhengan</string>
+    <string name="light">Ronak</string>
+    <string name="dark">Tari</string>
+    <string name="delete">Hilandin</string>
+    <string name="appearance">Xuyang</string>
+    <string name="rename">Binav bike</string>
+    <string name="confirm_delete">Jêbirinê piştrast bike</string>
+    <string name="title">Sernav</string>
+    <string name="move">Barkirin</string>
+    <string name="copy">Kopî</string>
+    <string name="info">Agahî</string>
+    <string name="import_">Têxistin</string>
+    <string name="select_folder">Peldankê hilbijêre</string>
+    <string name="editor">Edîtor</string>
+    <string name="folders">Peldankan</string>
+    <string name="theme">Rûkar</string>
+    <string name="about">Debar</string>
+    <string name="font_size">Mezinahiya nivîsê</string>
+    <string name="select">Hilbijartin</string>
+    <string name="language">Ziman</string>
+    <string name="sort">Rêz bike</string>
+    <string name="date">Dem</string>
+    <string name="deleteme____1">Nav</string>
+    <string name="size">Mezinayî</string>
+    <string name="reverse_order">Berevajî rêz bike</string>
+    <string name="contribute">Paraxwe dayin</string>
+    <string name="donate">Bexşandin</string>
+    <string name="exit">Derkeve</string>
+    <string name="undo">Vegerîne</string>
+    <string name="more">Bêhtir</string>
+    <string name="help">Alîkarî</string>
+    <string name="priority">Pêşikî</string>
+    <string name="history">Dîrok</string>
+    <string name="sync">Wekatkirin</string>
+    <string name="update">Rojanekirin</string>
+    <string name="clear">Pakirin</string>
+    <string name="archive">Arşîvkirin</string>
+    <string name="add_x_witharg">Zêdekirin %s</string>
+    <string name="refresh">Hênikkirin</string>
+    <string name="create_shortcut">Kurterîyekê biafirîne</string>
+    <string name="app_settings" needed="false">Sazkariyên Sepanê</string>
+    <string name="underline">Binxêzkirin</string>
+    <string name="general">Giştî</string>
+    <string name="resources">Çavkaniyên</string>
+    <string name="unordered_list_char_dash">Dash (-)</string>
+    <string name="unordered_list_char_asterisk">Stêrkok (*)</string>
+    <string name="unordered_list_char_plus">Biserve (+)</string>
+    <string name="vertical_alignment">Bicîkirina stûnî</string>
+    <string name="default_">Jixweber</string>
+    <string name="left">Çep</string>
+    <string name="right">Rast</string>
+    <string name="top">Lûtik</string>
+    <string name="bottom">Jêr</string>
+    <string name="join_community">Tevlî komê bibe</string>
+    <string name="source_code">Koda çavkanî</string>
+    <string name="location">Cî</string>
+    <string name="details">Hûrî</string>
+    <string name="calendar">Salname</string>
+    <string name="description">Terîf</string>
+    <string name="table_of_contents">Tabloya naverokan</string>
+    <string name="miscellaneous">Dîtir</string>
+    <string name="close">Girtin</string>
+    <string name="cancel">Bişûndekirin</string>
+    <string name="internal_storage">Depokirina navxweyî</string>
+</resources>
