[ci skip] Update translations (Persian)

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -316,8 +316,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="template">تمپلیت</string>
     <string name="send_debug_log">فرستادن گزارش های اشکال زدایی</string>
     <string name="print_pdf">چاپ PDF</string>
-    <string name="bigger_headings">Bigger headings</string>
-    <string name="increase_text_size_of_headings_according_to_level">Increase text size of headers according to level (# h1, ## h2. ### h3…)</string>
+    <string name="bigger_headings">عنوان‌های بزرگ‌تر</string>
+    <string name="increase_text_size_of_headings_according_to_level">افزایش اندازه متن برای عنوان‌ها در تناسب با سطح (‪# h1, ## h2. ### h3…‫‬‬)</string>
     <string name="current">جاری</string>
     <string name="record_audio">ضبط صدا</string>
     <string name="attach">اتصال</string>
@@ -358,6 +358,23 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_project">Add project</string>
     <string name="archive_completed_tasks">Archive completed tasks</string>
     <string name="sort_alphabetically">Sort alphabetically</string>
+    <string name="create_new_file_or_folder">ساخت پرونده یا پوشه جدید</string>
+    <string name="choose_format">انتخاب قالب</string>
+    <string name="selected">انتخاب شده</string>
+    <string name="back">بازگشت</string>
+    <string name="expand_collapse">گسترش دادن / بستن</string>
+    <string name="essential">ضروری</string>
+    <string name="append_human_readable_uuid_to_new_tasks">افزودن UUID قابل خواندن توسط انسان به وظایف جدید</string>
+    <string name="action_order">ترتیب کنش</string>
+    <string name="toggle_action_visibility">تغییر وضعیت پیدایی کنش</string>
+    <string name="load_default_settings">بار کردن تنظیمات پیش‌فرض</string>
+    <string name="drag">کشیدن</string>
+    <string name="created">ایجاد شد</string>
+    <string name="file_encryption_password">گذرواژه رمزگذاری پرونده</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">هیچ گذرواژه‌ای تاکنون تنظیم نشده است لذا امکان رمزگذاری و رمزگشایی وجود ندارد.\nبه تنظیمات&gt; عمومی&gt; گذرواژه بروید و گذرواژه‌ای تنظیم کنید.</string>
+    <string name="encrypt_file_content">رمزگذاری محتوای پرونده</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">نتوانستیم محتوای پرونده را رمزگذاری کنید. پرونده ذخیره نشد.</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">نتوانستیم محتوای پرونده را رمزگشایی کنیم. گذرواژه نادرستی استفاده کردید؟ آیا این پرونده واقعا توسط رمزگذاری AES مارکور رمزگذاری شده است؟</string>
     <string name="search_in_content">انتخاب محتوا</string>
     <string name="max_search_depth">Search depth</string>
     <string name="ignore_list">لیست موارد نادیده گرفته شده</string>
