--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -375,6 +375,27 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="encrypt_file_content">رمزگذاری محتوای پرونده</string>
     <string name="could_not_encrypt_file_content_the_file_was_not_saved">نتوانستیم محتوای پرونده را رمزگذاری کنید. پرونده ذخیره نشد.</string>
     <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">نتوانستیم محتوای پرونده را رمزگشایی کنیم. گذرواژه نادرستی استفاده کردید؟ آیا این پرونده واقعا توسط رمزگذاری AES مارکور رمزگذاری شده است؟</string>
+    <string name="password_already_set_setting_a_new_password_will_overwrite">گذرواژه از قبل تنظیم شده است. تنظیم گذرواژه جدید بر روی گذرواژه موجود نوشته می‌شود و اگر گذرواژه را فراموش کنید، دیگر نمی‌توانید به پرونده‌های خود دسترسی داشته باشید.</string>
+    <string name="code_block">بلوک کد</string>
+    <string name="add_completion_date">افزودن تاریخ تکمیل</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">افزودن تاریخ تکمیل برای فهرست کارها زمانی که همه‌شان انجام شده باشند</string>
+    <string name="file_description_format">قالب توضیحات پرونده</string>
+    <string name="loading_default_value">بارکردن مقادیر پیش‌فرض</string>
+    <string name="file_settings">تنظیمات پرونده</string>
+    <string name="search_and_replace">یافتن / جایگزینی</string>
+    <string name="search_for">جستجو برای</string>
+    <string name="replace_with">جایگزینی با</string>
+    <string name="replace_once">جایگیزینی (۱)</string>
+    <string name="replace_all">جایگزینی همه</string>
+    <string name="matches">تطابقات</string>
+    <string name="search_replace_pattern_error_message">خطای الگوی یافتن و جایگزینی.</string>
+    <string name="backup_settings">تنظیمات پشتیبان‌گیری</string>
+    <string name="restore_settings">تنظیمات بازیابی</string>
+    <string name="failed_to_create_backup">ایجاد نسخه پشتیبان ناموفق بود</string>
+    <string name="export_settings_to_json_file">برون‌ریزی تنظیمات در پرونده json</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">درون‌ریزی تنظیمات از پروند json پشتیبان. در صورت اتمام موفقیت‌آمیز، برنامه از نو اجرا می‌شود.</string>
+    <string name="failed_to_restore_settings_from_backup">عدم موفقیت در بازیابی تنظیمات از نسخه پشتیبان</string>
+    <string name="newline_is_new_paragraph">خط جدید = بند جدید</string>
     <string name="search_in_content">انتخاب محتوا</string>
     <string name="max_search_depth">Search depth</string>
     <string name="ignore_list">لیست موارد نادیده گرفته شده</string>
@@ -393,4 +414,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">بعد از اینکه پرونده بارگزاری شد، موقعیت مکان‌نما در انتهای پرونده قرار بگیرد</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Enter space-separated @contexts and +projects. These will always be visible at todo.txt insert dialogs.</string>
     <string name="infinite">نامحدود</string>
+    <string name="browse_by_project">مرور بر حسب پروژه</string>
+    <string name="browse_by_context">مرور بر حسب زمینه</string>
+    <string name="insert_project">درج پروژه‌ها</string>
+    <string name="insert_context">درج زمینه‌ها</string>
+    <string name="browse_todo">مرور فهرست کار</string>
+    <string name="browse_by_priority">مرور بر حسب اولویت</string>
+    <string name="browse_by_due_date">مرور بر حسب موعد اتمام</string>
+    <string name="due_overdue">سررسیده</string>
+    <string name="due_today">سررسید امروز</string>
+    <string name="due_future">سررسید در آینده</string>
+    <string name="completed">تمام شده</string>
+    <string name="match_any">مطالبقت با هر کدام</string>
+    <string name="match_all">مطابقت با همه</string>
 </resources>
