[ci skip] Update translations (Persian)

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -223,12 +223,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="contributors_public_add_yourself_description">Show contributor info. Provide it to be shown here on an opt-in basis after contributing</string>
     <string name="descending">نزولی</string>
     <string name="ascending">صعودی</string>
-    <string name="disable_spelling_underline">Disable spelling underline</string>
+    <string name="disable_spelling_underline">غیر فعال کردن زیرخط املا</string>
     <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Keyboard suggestions stay, red underline vanishes</string>
     <string name="location">مکان</string>
-    <string name="text_lines">خطوط النص</string>
-    <string name="text_characters">Text Characters</string>
-    <string name="text_words">Text Words</string>
+    <string name="text_lines">خطوط متن</string>
+    <string name="text_characters">نویسه‌های متن</string>
+    <string name="text_words">واژگان متن</string>
     <string name="directory">دایرکتوری</string>
     <string name="recently_viewed_documents">سندهایی که اخیرا استفاده شده است</string>
     <string name="details">ریزگان</string>
@@ -243,40 +243,40 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="math">ریاضی</string>
     <string name="table_of_contents">فهرست محتوا</string>
     <string name="miscellaneous">متفرقه</string>
-    <string name="textaction">Text action</string>
-    <string name="textactions">Text actions</string>
-    <string name="prefer_view">Prefer view</string>
-    <string name="no_calendar_app_is_installed">No calendar app is installed!</string>
-    <string name="popular_documents">Popular documents</string>
-    <string name="color">Color</string>
-    <string name="zero_width_space">Zero-width space</string>
+    <string name="textaction">کنش متن</string>
+    <string name="textactions">کنش‌های متن</string>
+    <string name="prefer_view">نمایش ترجیحی</string>
+    <string name="no_calendar_app_is_installed">برنامه‌ای برای تقویم نصب نشده است!</string>
+    <string name="popular_documents">اسناد محبوب</string>
+    <string name="color">رنگ</string>
+    <string name="zero_width_space">نیم‌فاصله</string>
     <string name="basic_color_scheme">Basic color scheme</string>
     <string name="background_foreground_color_in_editor_works_dark_light">Changes background and foreground color of the text editor. Adjusts to app theme so available in light and dark theme. Syntax highlighting colors remain the same.</string>
-    <string name="preset">Preset</string>
-    <string name="foreground">Foreground</string>
-    <string name="background">Background</string>
+    <string name="preset">پیش‌تنظیم</string>
+    <string name="foreground">پیش‌زمینه</string>
+    <string name="background">پس‌زمینه</string>
     <string name="set_foreground_or_background_color_hexcolor_also_possible">Set foreground or background color of text? Inserting hex color code is also possible.</string>
-    <string name="type">Type</string>
-    <string name="folder">Folder</string>
+    <string name="type">نوع</string>
+    <string name="folder">پوشه</string>
     <string name="folder_is_created_without_extension">- Folder is created without file extension</string>
     <string name="keep_existing_file">- Files and folders are not overwritten</string>
     <string name="multiple_windows">Multiple windows</string>
-    <string name="font">Font</string>
+    <string name="font">قلم</string>
     <string name="open_new_documents_always_in_new_window">Open documents always in separate windows. Switch using the \'recents\' key of your device.</string>
     <string name="enter_or_select_format">Enter or select format</string>
-    <string name="pick_date">Pick date</string>
-    <string name="pick_time">Pick time</string>
+    <string name="pick_date">انتخاب تاریخ</string>
+    <string name="pick_time">انتخاب زمان</string>
     <string name="get_format_instead_date_or_time">Get format instead date or time</string>
-    <string name="always_use_current_date_and_time">Always use current date &amp; time</string>
-    <string name="result">Result</string>
-    <string name="just_time">Time only</string>
+    <string name="always_use_current_date_and_time">همیشه از تاریخ و زمان جاری استفاده شود</string>
+    <string name="result">نتیجه</string>
+    <string name="just_time">فقط زمان</string>
     <string name="just_date">Date only</string>
     <string name="last_used">Last used</string>
     <string name="my_note">my_note</string>
     <string name="close">Close</string>
     <string name="cancel">Cancel</string>
     <string name="do_you_like_this_project_want_donate_to_keep_alive">Do you enjoy this project? Do you want to support further improvements and bug fixes?\n\nDeveloping apps and writing related blog posts take a lot of time! If you want to help the project to continue, please consider a small donation!\n\nThis project is developed in spare time, completely for free and without any advertisements!</string>
-    <string name="app_start_tab">App start tab</string>
+    <string name="app_start_tab">برگه شروع برنامه</string>
     <string name="tab_to_select_at_start">Tab to select when starting the app</string>
     <string name="swipe_to_change_mode">Swipe to change mode</string>
     <string name="swipe_to_change_to_edit_or_view_mode">Swipe to change to edit or view mode (opposite of the current mode)</string>
@@ -380,6 +380,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_completion_date">افزودن تاریخ تکمیل</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">افزودن تاریخ تکمیل برای فهرست کارها زمانی که همه‌شان انجام شده باشند</string>
     <string name="file_description_format">قالب توضیحات پرونده</string>
+    <string name="file_description_format_dialog">قالب برای توضیحات هر پرونده در مرور پرونده. از قوائد SimpleDateFormat اندروید پیروی می‌کند به اضافه FS برای نمایش اندازه پرونده. خالی بگذارید تا از قالب پیش‌فرض برای محل شما استفاده کند.\n\nمثال‌هایی از ورودی:\nFS yyyy MMM dd hh:mm:ss aa\nقالب خروجی:\n30KB 2020 Mar 20 11:24:52 PM</string>
     <string name="loading_default_value">بارکردن مقادیر پیش‌فرض</string>
     <string name="file_settings">تنظیمات پرونده</string>
     <string name="search_and_replace">یافتن / جایگزینی</string>
