[ci skip] Update translations (Persian)

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -280,23 +280,23 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="tab_to_select_at_start">Tab to select when starting the app</string>
     <string name="swipe_to_change_mode">Swipe to change mode</string>
     <string name="swipe_to_change_to_edit_or_view_mode">Swipe to change to edit or view mode (opposite of the current mode)</string>
-    <string name="folder_first">Folder first</string>
+    <string name="folder_first">اول پوشه‌ها</string>
     <string name="go_to">Go to</string>
     <string name="appdata_public">AppData (public)</string>
     <string name="appdata_private">AppData (private)</string>
     <string name="appdata_sdcard">AppData (SD Card)</string>
-    <string name="internal_storage">Internal storage</string>
+    <string name="internal_storage">حافظه داخلی</string>
     <string name="open_the_document_from_main_view">You can open the document from main view on the bottom, the file browser or the launcher. There is also a option to append text shared into Markor.</string>
     <string name="notebook_is_the_home_of_your_files">Notebook is the folder that Markor loads in the file browser when the app is started. It is the home folder of your files.</string>
     <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote is the fastest option to write down notes. It is a file in Markdown format with default location &gt;Notebook/QuickNote.md&lt;, you can set a custom filepath in the settings.</string>
     <string name="todo_is_the_easiest_way_">Manage your tasks with ToDo. It is a file in todo.txt format with default location &gt;Notebook/todo.txt&lt;, you can set a custom filepath in the settings.</string>
-    <string name="navigationbar_color">Navigation bar color</string>
-    <string name="black">Black</string>
-    <string name="white">White</string>
-    <string name="view">View</string>
-    <string name="view_mode">View mode</string>
+    <string name="navigationbar_color">رنگ نوار پیمایش</string>
+    <string name="black">سیاه</string>
+    <string name="white">سفید</string>
+    <string name="view">نمایش</string>
+    <string name="view_mode">حالت نمایش</string>
     <string name="edit_mode">حالت ویرایش</string>
-    <string name="mount_storage">‏اتصال حافظهٔ USB</string>
+    <string name="mount_storage">سوار کردن حافظه</string>
     <string name="application_needs_access_to_storage_mount_it">Permission is required to access this storage. Mount the storage to give access. Confirm this dialog to get a popup. Select the storage there and press select.</string>
     <string name="share_into">Share into</string>
     <string name="favourite">علاقه‌مندی</string>
